# basmat

./: AUTHORS  BMsim-20180612.yab  ChangeLog  Makefile.am  Makefile.in  README  README.md  Readme.md  basmat.c  config.h.in  configure  configure.ac  test.sh
basic/: BM1.yab  BM2.bas  BM2.yab  BM2sim.yab  BM3.bas  BM3.yab  BM3sim.yab  BM4.bas  BM4.yab  BM4sim.yab  BMsim-20180612.yab  BTMS.bas  BTMS.yab  BTMSsim.yab  README.md  README.txt  test.sh  test.txt  v3b.txt
cgi/: Readme.md  basmat.cgi  help.txt
docs/: _config.yml  definition.md  index.md  install.md
docs/_layouts/: default.html
